<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context=".ui.LearnYesNoActivity" >

    <TextView
        android:id="@+id/learnText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/learn_yesno"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_yes"
        android:onClick="parseYes" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_no"
        android:onClick="parseNo" />

</LinearLayout>