<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context=".ui.LoseActivity" >

    <TextView
        android:id="@+id/loseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_lose"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/challengeText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/end_challenge"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        android:onClick="startNewGame" />

</LinearLayout>